--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "eslint-config-prettier": "^9.0.0",
