--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
+    "rootDir": "./pages/server",
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
