--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@types/express": "^4.17.18",
-    "@types/node": "^20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "eslint": "8.49.0",
@@ -20,16 +19,17 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/node": "^20.8.0",
     "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
